--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,121 @@
-p {
-  color: blue;
+:root {
+  --widthLeft: 37.2vw;
+}
+
+@font-face {
+  font-family: "Norse Bold";
+  src: url(./fonts/Norse-Bold.otf);
+}
+
+body {
+  font-family: sans-serif;
+  /* margin: 0px; */ /*uncomment line*/
+
+  /*margin and color to compare with odin project sample*/
+  background-color: rgb(14, 14, 14); /*remove line*/
+  margin: 0px 97px; /*remove line*/
+}
+
+h2 {
+  font-size: 1.4rem;
+}
+
+.page-container {
+  display: flex;
+  height: 100vh;
+}
+
+.left-sec {
+  background-image: url(./img/background.avif);
+  background-size: cover;
+  background-color: #596D48; /*Used if the image is unavailable */
+  background-position: center;
+  width: var(--widthLeft);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.right-sec {
+  background-color: rgb(249, 250, 251);
+  width: calc(100vw - var(--widthLeft));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logo-container {
+  background-color: rgba(0, 0, 0, .45);
+  height: 12.4vh;
+  margin-top: 21.9vh;
+  padding: 0.65rem 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+img {
+  height: 100%;
+}
+
+.logo {
+  font-family: "Norse Bold";
+  font-size: 5.3rem;
+  color: rgb(255, 255, 255);
+}
+
+.caption-container {
+  justify-content: center;
+  align-content: center;
+  font-size: 0.75rem;
+  color: rgb(214, 214, 214);
+  display: flex;
+}
+
+.sub-sec {
+  padding: 0 50px;
+}
+
+.form-container {
+  background-color: rgb(255, 255, 255);
+  margin-top: 4vh;
+  height: 30%;
+  box-shadow: 0px 5px 5px 0px rgb(225, 226, 226);
+}
+
+button {
+  color: rgb(255, 255, 255);
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #596D48;
+  border-radius: 5px;
+  border-style: none;
+  padding: 13px 40px;
+  margin-top: 4vh;
+  margin-bottom: 2vh;
+}
+
+a {
+  text-decoration: none;
+  color: #596D48;
+  font-weight: 600;
+}
+
+.formGroup {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.formPair {
+  display: flex;
+  flex-direction: column;
+  margin-right: 50px;
+}
+
+label {
+  color: rgb(15, 15, 15);
+  font-size: 0.65rem;
+  font-weight: 600;
+  letter-spacing: 0.2em;
+  margin-bottom: 2px;
 }
